--- a/packages/alfa-aria/package.json
+++ b/packages/alfa-aria/package.json
@@ -29,8 +29,12 @@
     "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-lazy": "^0.0.0",
+    "@siteimprove/alfa-map": "^0.0.0",
+    "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
-    "@siteimprove/alfa-predicate": "^0.0.0"
+    "@siteimprove/alfa-predicate": "^0.0.0",
+    "@siteimprove/alfa-sequence": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
