--- a/packages/alfa-hash/tsconfig.json
+++ b/packages/alfa-hash/tsconfig.json
@@ -9,7 +9,7 @@
   ],
   "references": [
     {
-      "path": "../alfa-guards"
+      "path": "../alfa-predicate"
     },
     {
       "path": "../alfa-test"
