--- a/packages/alfa-http/package.json
+++ b/packages/alfa-http/package.json
@@ -22,7 +22,7 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
-    "@siteimprove/alfa-guards": "^0.0.0"
+    "@siteimprove/alfa-predicate": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
