--- a/packages/alfa-web/package.json
+++ b/packages/alfa-web/package.json
@@ -25,8 +25,8 @@
     "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-graph": "^0.0.0",
-    "@siteimprove/alfa-guards": "^0.0.0",
-    "@siteimprove/alfa-http": "^0.0.0"
+    "@siteimprove/alfa-http": "^0.0.0",
+    "@siteimprove/alfa-predicate": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
