Use `List` for `Branched.traverse()` and `Future.traverse()`

--- a/packages/alfa-future/tsconfig.json
+++ b/packages/alfa-future/tsconfig.json
@@ -12,6 +12,9 @@
       "path": "../alfa-functor"
     },
     {
+      "path": "../alfa-list"
+    },
+    {
       "path": "../alfa-mapper"
     },
     {
