--- a/packages/alfa-future/package.json
+++ b/packages/alfa-future/package.json
@@ -25,6 +25,7 @@
     "@siteimprove/alfa-callback": "^0.0.0",
     "@siteimprove/alfa-continuation": "^0.0.0",
     "@siteimprove/alfa-functor": "^0.0.0",
+    "@siteimprove/alfa-list": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
     "@siteimprove/alfa-thunk": "^0.0.0",
