Add missing dependency

--- a/packages/alfa-act/tsconfig.json
+++ b/packages/alfa-act/tsconfig.json
@@ -45,6 +45,9 @@
       "path": "../alfa-result"
     },
     {
+      "path": "../alfa-sequence"
+    },
+    {
       "path": "../alfa-test"
     }
   ]
