--- a/packages/alfa-aria/tsconfig.json
+++ b/packages/alfa-aria/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "extends": "../tsconfig.json",
   "files": [
-    "src/node.ts",
     "src/attribute.ts",
     "src/feature.ts",
     "src/get-name.ts",
     "src/index.ts",
+    "src/node.ts",
     "src/role.ts",
     "src/role/abstract/command.ts",
     "src/role/abstract/composite.ts",
@@ -91,8 +91,8 @@
     "src/role/widget/tree.ts",
     "src/role/window/alert-dialog.ts",
     "src/role/window/dialog.ts",
-    "test/node.spec.tsx",
-    "test/get-name.spec.tsx"
+    "test/get-name.spec.tsx",
+    "test/node.spec.tsx"
   ],
   "references": [
     {
