--- a/packages/alfa-map/tsconfig.json
+++ b/packages/alfa-map/tsconfig.json
@@ -6,7 +6,7 @@
       "path": "../alfa-bits"
     },
     {
-      "path": "../alfa-equality"
+      "path": "../alfa-equatable"
     },
     {
       "path": "../alfa-fnv"
