--- a/packages/alfa-set/tsconfig.json
+++ b/packages/alfa-set/tsconfig.json
@@ -3,7 +3,7 @@
   "files": ["src/index.ts", "src/set.ts"],
   "references": [
     {
-      "path": "../alfa-equality"
+      "path": "../alfa-equatable"
     },
     {
       "path": "../alfa-foldable"
