--- a/packages/alfa-equatable/tsconfig.json
+++ b/packages/alfa-equatable/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../tsconfig.json",
-  "files": ["src/equality.ts", "src/index.ts"],
+  "files": ["src/equatable.ts", "src/index.ts"],
   "references": [
     {
       "path": "../alfa-test"
