--- a/packages/alfa-record/tsconfig.json
+++ b/packages/alfa-record/tsconfig.json
@@ -3,7 +3,7 @@
   "files": ["src/index.ts", "src/record.ts", "test/record.spec.ts"],
   "references": [
     {
-      "path": "../alfa-equality"
+      "path": "../alfa-equatable"
     },
     {
       "path": "../alfa-foldable"
