--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -11,6 +11,7 @@
     { "path": "alfa-branched" },
     { "path": "alfa-cache" },
     { "path": "alfa-callback" },
+    { "path": "alfa-cascade" },
     { "path": "alfa-chai" },
     { "path": "alfa-cheerio" },
     { "path": "alfa-cli" },
@@ -44,6 +45,7 @@
     { "path": "alfa-map" },
     { "path": "alfa-mapper" },
     { "path": "alfa-math" },
+    { "path": "alfa-media" },
     { "path": "alfa-monad" },
     { "path": "alfa-option" },
     { "path": "alfa-parser" },
@@ -55,9 +57,11 @@
     { "path": "alfa-result" },
     { "path": "alfa-rules" },
     { "path": "alfa-scraper" },
+    { "path": "alfa-selector" },
     { "path": "alfa-set" },
     { "path": "alfa-sequence" },
     { "path": "alfa-slice" },
+    { "path": "alfa-style" },
     { "path": "alfa-test" },
     { "path": "alfa-thunk" },
     { "path": "alfa-trampoline" },
