--- a/packages/alfa-css/package.json
+++ b/packages/alfa-css/package.json
@@ -22,15 +22,13 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
-    "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-equatable": "^0.0.0",
-    "@siteimprove/alfa-foldable": "^0.0.0",
-    "@siteimprove/alfa-functor": "^0.0.0",
-    "@siteimprove/alfa-mapper": "^0.0.0",
-    "@siteimprove/alfa-monad": "^0.0.0",
+    "@siteimprove/alfa-iterable": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-parser": "^0.0.0",
-    "@siteimprove/alfa-reducer": "^0.0.0",
+    "@siteimprove/alfa-predicate": "^0.0.0",
+    "@siteimprove/alfa-result": "^0.0.0",
     "@siteimprove/alfa-slice": "^0.0.0",
     "@siteimprove/alfa-thunk": "^0.0.0"
   },
