--- a/packages/alfa-style/package.json
+++ b/packages/alfa-style/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@siteimprove/alfa-rules",
+  "name": "@siteimprove/alfa-style",
   "author": "Siteimprove A/S",
   "homepage": "https://siteimprove.com",
   "version": "0.0.0",
@@ -22,24 +22,20 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
-    "@siteimprove/alfa-act": "^0.0.0",
-    "@siteimprove/alfa-affine": "^0.0.0",
-    "@siteimprove/alfa-aria": "^0.0.0",
-    "@siteimprove/alfa-branched": "^0.0.0",
-    "@siteimprove/alfa-compatibility": "^0.0.0",
+    "@siteimprove/alfa-cache": "^0.0.0",
+    "@siteimprove/alfa-cascade": "^0.0.0",
     "@siteimprove/alfa-css": "^0.0.0",
     "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
-    "@siteimprove/alfa-iana": "^0.0.0",
+    "@siteimprove/alfa-equatable": "^0.0.0",
+    "@siteimprove/alfa-functor": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
-    "@siteimprove/alfa-lang": "^0.0.0",
+    "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-math": "^0.0.0",
-    "@siteimprove/alfa-media": "^0.0.0",
+    "@siteimprove/alfa-monad": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
-    "@siteimprove/alfa-predicate": "^0.0.0",
-    "@siteimprove/alfa-result": "^0.0.0",
-    "@siteimprove/alfa-style": "^0.0.0",
-    "@siteimprove/alfa-web": "^0.0.0"
+    "@siteimprove/alfa-parser": "^0.0.0",
+    "@siteimprove/alfa-slice": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
