--- a/packages/alfa-css/tsconfig.json
+++ b/packages/alfa-css/tsconfig.json
@@ -3,6 +3,9 @@
   "files": [
     "src/index.ts",
     "src/syntax.ts",
+    "src/syntax/block.ts",
+    "src/syntax/component.ts",
+    "src/syntax/declaration.ts",
     "src/syntax/lexer.ts",
     "src/syntax/token.ts",
     "src/value.ts",
