--- a/packages/alfa-branched/tsconfig.json
+++ b/packages/alfa-branched/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
   "files": ["src/branched.ts", "src/index.ts", "test/branched.spec.ts"],
   "references": [
