--- a/packages/alfa-callback/tsconfig.json
+++ b/packages/alfa-callback/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
   "files": ["src/callback.ts", "src/index.ts"],
   "references": [
