--- a/packages/alfa-cypress/tsconfig.json
+++ b/packages/alfa-cypress/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
   "files": ["chai.ts", "src/cypress.ts", "src/index.ts"],
   "references": [
