--- a/packages/alfa-either/tsconfig.json
+++ b/packages/alfa-either/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
   "files": ["src/either.ts", "src/index.ts", "src/left.ts", "src/right.ts"],
   "references": [
