--- a/packages/alfa-highlight/tsconfig.json
+++ b/packages/alfa-highlight/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
   "files": ["src/highlight.ts", "src/index.ts", "src/markers.ts"],
   "references": []
