--- a/packages/alfa-iterable/tsconfig.json
+++ b/packages/alfa-iterable/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
   "files": ["src/index.ts", "src/iterable.ts", "test/iterable.spec.ts"],
   "references": [
