--- a/packages/alfa-record/tsconfig.json
+++ b/packages/alfa-record/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
   "files": ["src/index.ts", "src/record.ts", "test/record.spec.ts"],
   "references": [
