--- a/packages/alfa-thunk/tsconfig.json
+++ b/packages/alfa-thunk/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
   "files": ["src/index.ts", "src/thunk.ts", "test/thunk.spec.ts"],
   "references": [
