--- a/packages/alfa-unexpected/tsconfig.json
+++ b/packages/alfa-unexpected/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
   "files": ["plugin.ts", "src/index.ts", "src/unexpected.ts"],
   "references": [
