--- a/packages/alfa-dom/package.json
+++ b/packages/alfa-dom/package.json
@@ -24,6 +24,7 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@siteimprove/alfa-css": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
     "@siteimprove/alfa-lazy": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
