Give the build scripts an overhaul

--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,35 +1,28 @@
 {
+  "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "allowJs": true,
     "checkJs": true,
-    "noEmit": true,
     "types": ["node"]
   },
   "files": [
     "format.js",
+    "helpers/cache.js",
     "helpers/child-process.js",
-    "helpers/coverage.js",
     "helpers/crypto.js",
     "helpers/file-system.js",
     "helpers/git.js",
     "helpers/graph.js",
-    "helpers/iterable.js",
+    "helpers/http.js",
     "helpers/language-host.js",
     "helpers/manifest.js",
     "helpers/meta.js",
-    "helpers/metrics/arithmetic.js",
-    "helpers/metrics/byte.js",
-    "helpers/metrics/cyclomatic.js",
-    "helpers/metrics/logical.js",
     "helpers/notify.js",
     "helpers/path.js",
     "helpers/predicates.js",
     "helpers/project.js",
-    "helpers/text.js",
     "helpers/time.js",
-    "helpers/todos.js",
-    "helpers/typescript.js",
     "helpers/workspace.js",
     "precommit.js",
     "prepare.js",
