--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "http://json.schemastore.org/package",
   "private": true,
   "name": "@siteimprove/alfa",
   "author": "Siteimprove A/S",
@@ -32,18 +33,16 @@
     "docs/**/*"
   ],
   "devDependencies": {
-    "@types/node": "^12.0.2",
-    "@types/prettier": "^1.16.1",
+    "@types/node": "^12.12.21",
+    "@types/prettier": "^1.19.0",
     "axios": "^0.19.0",
-    "chalk": "^2.4.2",
-    "chokidar": "^3.0.2",
-    "husky": "^3.0.2",
+    "chalk": "^3.0.0",
+    "chokidar": "^3.3.1",
+    "husky": "^3.1.0",
     "ignore": "^5.0.5",
-    "lerna": "^3.16.4",
-    "prettier": "1.18.2",
-    "source-map": "^0.7.3",
-    "source-map-support": "^0.5.10",
-    "tslint": "^5.12.1",
-    "typescript": "^3.6.4"
+    "lerna": "^3.19.0",
+    "prettier": "1.19.1",
+    "source-map-support": "^0.5.16",
+    "typescript": "^3.7.4"
   }
 }
