--- a/packages/alfa-angular/package.json
+++ b/packages/alfa-angular/package.json
@@ -29,6 +29,7 @@
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-jasmine": "^0.0.0",
     "@siteimprove/alfa-jest": "^0.0.0",
+    "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-unexpected": "^0.0.0",
     "@siteimprove/alfa-web": "^0.0.0",
     "rxjs": "^6.5.2",
