--- a/packages/alfa-hash/package.json
+++ b/packages/alfa-hash/package.json
@@ -22,6 +22,7 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@siteimprove/alfa-encoding": "^0.0.0",
     "@siteimprove/alfa-predicate": "^0.0.0"
   },
   "devDependencies": {
