--- a/packages/alfa-jquery/package.json
+++ b/packages/alfa-jquery/package.json
@@ -25,6 +25,8 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-option": "^0.0.0",
+    "@siteimprove/alfa-predicate": "^0.0.0",
     "@siteimprove/alfa-web": "^0.0.0",
     "@types/jquery": "^3.3.29",
     "jquery": "^3.4.1"
