--- a/packages/alfa-puppeteer/package.json
+++ b/packages/alfa-puppeteer/package.json
@@ -27,6 +27,7 @@
     "@siteimprove/alfa-chai": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-future": "^0.0.0",
+    "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-predicate": "^0.0.0",
     "@siteimprove/alfa-web": "^0.0.0",
     "@types/puppeteer": "^1.20.1",
