--- a/packages/alfa-react/package.json
+++ b/packages/alfa-react/package.json
@@ -28,6 +28,8 @@
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-jasmine": "^0.0.0",
     "@siteimprove/alfa-jest": "^0.0.0",
+    "@siteimprove/alfa-option": "^0.0.0",
+    "@siteimprove/alfa-predicate": "^0.0.0",
     "@siteimprove/alfa-unexpected": "^0.0.0",
     "@siteimprove/alfa-web": "^0.0.0",
     "@types/react": "^16.8.4",
