Get the remaining bits and pieces compiling

--- a/packages/alfa-compatibility/scripts/tsconfig.json
+++ b/packages/alfa-compatibility/scripts/tsconfig.json
@@ -1,3 +1,5 @@
 {
-  "extends": "../../../scripts/tsconfig.json"
+  "$schema": "http://json.schemastore.org/tsconfig",
+  "extends": "../../../scripts/tsconfig.json",
+  "files": ["browsers.js", "features.js"]
 }
