--- a/packages/alfa-puppeteer/tsconfig.json
+++ b/packages/alfa-puppeteer/tsconfig.json
@@ -13,6 +13,9 @@
       "path": "../alfa-future"
     },
     {
+      "path": "../alfa-option"
+    },
+    {
       "path": "../alfa-predicate"
     },
     {
