--- a/packages/alfa-webdriver/tsconfig.json
+++ b/packages/alfa-webdriver/tsconfig.json
@@ -10,6 +10,15 @@
       "path": "../alfa-dom"
     },
     {
+      "path": "../alfa-future"
+    },
+    {
+      "path": "../alfa-option"
+    },
+    {
+      "path": "../alfa-predicate"
+    },
+    {
       "path": "../alfa-test"
     },
     {
