--- a/packages/alfa-angular/tsconfig.json
+++ b/packages/alfa-angular/tsconfig.json
@@ -23,6 +23,9 @@
       "path": "../alfa-jest"
     },
     {
+      "path": "../alfa-option"
+    },
+    {
       "path": "../alfa-test"
     },
     {
