--- a/packages/alfa-iana/scripts/tsconfig.json
+++ b/packages/alfa-iana/scripts/tsconfig.json
@@ -1,3 +1,5 @@
 {
-  "extends": "../../../scripts/tsconfig.json"
+  "$schema": "http://json.schemastore.org/tsconfig",
+  "extends": "../../../scripts/tsconfig.json",
+  "files": ["subtags.js"]
 }
