--- a/packages/alfa-jquery/tsconfig.json
+++ b/packages/alfa-jquery/tsconfig.json
@@ -7,6 +7,12 @@
       "path": "../alfa-dom"
     },
     {
+      "path": "../alfa-option"
+    },
+    {
+      "path": "../alfa-predicate"
+    },
+    {
       "path": "../alfa-test"
     },
     {
