--- a/packages/alfa-rules/package.json
+++ b/packages/alfa-rules/package.json
@@ -30,6 +30,7 @@
     "@siteimprove/alfa-css": "^0.0.0",
     "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-future": "^0.0.0",
     "@siteimprove/alfa-iana": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
     "@siteimprove/alfa-lang": "^0.0.0",
@@ -37,6 +38,7 @@
     "@siteimprove/alfa-media": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-predicate": "^0.0.0",
+    "@siteimprove/alfa-record": "^0.0.0",
     "@siteimprove/alfa-result": "^0.0.0",
     "@siteimprove/alfa-style": "^0.0.0",
     "@siteimprove/alfa-web": "^0.0.0"
