--- a/packages/alfa-iterable/tsconfig.json
+++ b/packages/alfa-iterable/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
-  "files": ["src/index.ts", "src/iterable.ts", "test/iterable.spec.ts"],
+  "files": ["src/index.ts", "src/iterable.ts"],
   "references": [
     {
       "path": "../alfa-equatable"
