--- a/packages/alfa-mapper/tsconfig.json
+++ b/packages/alfa-mapper/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
-  "files": ["src/index.ts", "src/mapper.ts", "test/mapper.spec.ts"],
+  "files": ["src/index.ts", "src/mapper.ts"],
   "references": [
     {
       "path": "../alfa-test"
