--- a/packages/alfa-monad/tsconfig.json
+++ b/packages/alfa-monad/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
-  "files": ["src/index.ts", "src/monad.ts", "test/monad.spec.ts"],
+  "files": ["src/index.ts", "src/monad.ts"],
   "references": [
     {
       "path": "../alfa-mapper"
