--- a/packages/alfa-record/tsconfig.json
+++ b/packages/alfa-record/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
-  "files": ["src/index.ts", "src/record.ts", "test/record.spec.ts"],
+  "files": ["src/index.ts", "src/record.ts"],
   "references": [
     {
       "path": "../alfa-equatable"
