--- a/packages/alfa-scraper/package.json
+++ b/packages/alfa-scraper/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-encoding": "^0.0.0",
     "@siteimprove/alfa-http": "^0.0.0",
     "@siteimprove/alfa-puppeteer": "^0.0.0",
     "@siteimprove/alfa-web": "^0.0.0",
