--- a/packages/alfa-scraper/tsconfig.json
+++ b/packages/alfa-scraper/tsconfig.json
@@ -10,6 +10,9 @@
       "path": "../alfa-dom"
     },
     {
+      "path": "../alfa-encoding"
+    },
+    {
       "path": "../alfa-http"
     },
     {
