--- a/packages/alfa-cli/package.json
+++ b/packages/alfa-cli/package.json
@@ -43,9 +43,7 @@
     "@siteimprove/alfa-rules": "^0.0.0",
     "@siteimprove/alfa-scraper": "^0.0.0",
     "@siteimprove/alfa-web": "^0.0.0",
-    "@types/yargs": "^13.0.0",
-    "enquirer": "^2.3.0",
-    "yargs": "^14.0.0"
+    "enquirer": "^2.3.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
