Only declare Prettier as a dependency at top-level

--- a/packages/alfa-iana/package.json
+++ b/packages/alfa-iana/package.json
@@ -29,7 +29,6 @@
     "@siteimprove/alfa-option": "^0.0.0"
   },
   "devDependencies": {
-    "@siteimprove/alfa-test": "^0.0.0",
-    "prettier": "1.18.2"
+    "@siteimprove/alfa-test": "^0.0.0"
   }
 }
