--- a/packages/alfa-compatibility/package.json
+++ b/packages/alfa-compatibility/package.json
@@ -32,7 +32,6 @@
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0",
-    "mdn-browser-compat-data": "0.0.94",
-    "prettier": "1.18.2"
+    "mdn-browser-compat-data": "0.0.94"
   }
 }
