--- a/packages/alfa-graph/package.json
+++ b/packages/alfa-graph/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@siteimprove/alfa-equatable": "^0.0.0",
     "@siteimprove/alfa-map": "^0.0.0",
+    "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-set": "^0.0.0"
   },
   "devDependencies": {
