--- a/packages/alfa-graph/tsconfig.json
+++ b/packages/alfa-graph/tsconfig.json
@@ -10,6 +10,9 @@
       "path": "../alfa-map"
     },
     {
+      "path": "../alfa-option"
+    },
+    {
       "path": "../alfa-set"
     },
     {
