--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -88,7 +88,9 @@
     "src/sia-r8/rule.ts",
     "src/sia-r9/rule.ts",
     "test/common/evaluate.ts",
-    "test/sia-r1/rule.spec.tsx"
+    "test/common/outcome.ts",
+    "test/sia-r1/rule.spec.tsx",
+    "test/sia-r2/rule.spec.tsx"
   ],
   "references": [
     {
