--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -80,6 +80,7 @@
     "src/sia-r49/rule.ts",
     "src/sia-r5/rule.ts",
     "src/sia-r50/rule.ts",
+    "src/sia-r57/rule.ts",
     "src/sia-r59/rule.ts",
     "src/sia-r6/rule.ts",
     "src/sia-r63/rule.ts",
@@ -90,7 +91,8 @@
     "test/common/evaluate.ts",
     "test/common/outcome.ts",
     "test/sia-r1/rule.spec.tsx",
-    "test/sia-r2/rule.spec.tsx"
+    "test/sia-r2/rule.spec.tsx",
+    "test/sia-r57/rule.spec.tsx"
   ],
   "references": [
     {
