--- a/packages/alfa-device/tsconfig.json
+++ b/packages/alfa-device/tsconfig.json
@@ -1,7 +1,12 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
-  "files": ["src/device.ts", "src/index.ts"],
+  "files": [
+    "src/device.ts",
+    "src/display.ts",
+    "src/index.ts",
+    "src/viewport.ts"
+  ],
   "references": [
     {
       "path": "../alfa-test"
