Get integrations compiling again

--- a/packages/alfa-cheerio/tsconfig.json
+++ b/packages/alfa-cheerio/tsconfig.json
@@ -4,7 +4,13 @@
   "files": ["src/cheerio.ts", "src/index.ts"],
   "references": [
     {
+      "path": "../alfa-device"
+    },
+    {
       "path": "../alfa-dom"
+    },
+    {
+      "path": "../alfa-http"
     },
     {
       "path": "../alfa-test"
