--- a/packages/alfa-angular/package.json
+++ b/packages/alfa-angular/package.json
@@ -26,7 +26,9 @@
   "dependencies": {
     "@angular/core": "^8.2.0",
     "@siteimprove/alfa-chai": "^0.0.0",
+    "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-http": "^0.0.0",
     "@siteimprove/alfa-jasmine": "^0.0.0",
     "@siteimprove/alfa-jest": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
