--- a/packages/alfa-angular/tsconfig.json
+++ b/packages/alfa-angular/tsconfig.json
@@ -14,7 +14,13 @@
       "path": "../alfa-chai"
     },
     {
+      "path": "../alfa-device"
+    },
+    {
       "path": "../alfa-dom"
+    },
+    {
+      "path": "../alfa-http"
     },
     {
       "path": "../alfa-jasmine"
