--- a/packages/alfa-cypress/package.json
+++ b/packages/alfa-cypress/package.json
@@ -26,7 +26,9 @@
   "dependencies": {
     "@siteimprove/alfa-assert": "^0.0.0",
     "@siteimprove/alfa-chai": "^0.0.0",
+    "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-http": "^0.0.0",
     "@siteimprove/alfa-jquery": "^0.0.0",
     "@siteimprove/alfa-web": "^0.0.0",
     "cypress": "^3.3.1"
