--- a/packages/alfa-jquery/package.json
+++ b/packages/alfa-jquery/package.json
@@ -24,7 +24,9 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-http": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-predicate": "^0.0.0",
     "@siteimprove/alfa-web": "^0.0.0",
