--- a/packages/alfa-react/package.json
+++ b/packages/alfa-react/package.json
@@ -25,7 +25,9 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-chai": "^0.0.0",
+    "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-http": "^0.0.0",
     "@siteimprove/alfa-jasmine": "^0.0.0",
     "@siteimprove/alfa-jest": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
