Add missing package references

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -9,6 +9,7 @@
     { "path": "alfa-applicative" },
     { "path": "alfa-aria" },
     { "path": "alfa-assert" },
+    { "path": "alfa-bits" },
     { "path": "alfa-branched" },
     { "path": "alfa-cache" },
     { "path": "alfa-callback" },
@@ -23,6 +24,7 @@
     { "path": "alfa-device" },
     { "path": "alfa-dom" },
     { "path": "alfa-either" },
+    { "path": "alfa-encoding" },
     { "path": "alfa-enzyme" },
     { "path": "alfa-equatable" },
     { "path": "alfa-fnv" },
@@ -59,8 +61,8 @@
     { "path": "alfa-rules" },
     { "path": "alfa-scraper" },
     { "path": "alfa-selector" },
-    { "path": "alfa-set" },
     { "path": "alfa-sequence" },
+    { "path": "alfa-set" },
     { "path": "alfa-slice" },
     { "path": "alfa-style" },
     { "path": "alfa-test" },
