--- a/packages/alfa-graph/tsconfig.json
+++ b/packages/alfa-graph/tsconfig.json
@@ -7,6 +7,12 @@
       "path": "../alfa-equatable"
     },
     {
+      "path": "../alfa-iterable"
+    },
+    {
+      "path": "../alfa-json"
+    },
+    {
       "path": "../alfa-map"
     },
     {
