--- a/packages/alfa-lazy/tsconfig.json
+++ b/packages/alfa-lazy/tsconfig.json
@@ -10,6 +10,9 @@
       "path": "../alfa-functor"
     },
     {
+      "path": "../alfa-json"
+    },
+    {
       "path": "../alfa-mapper"
     },
     {
