--- a/packages/alfa-option/tsconfig.json
+++ b/packages/alfa-option/tsconfig.json
@@ -25,6 +25,9 @@
       "path": "../alfa-hash"
     },
     {
+      "path": "../alfa-json"
+    },
+    {
       "path": "../alfa-mapper"
     },
     {
