--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -23,6 +23,7 @@
     { "path": "alfa-cypress" },
     { "path": "alfa-device" },
     { "path": "alfa-dom" },
+    { "path": "alfa-earl" },
     { "path": "alfa-either" },
     { "path": "alfa-encoding" },
     { "path": "alfa-enzyme" },
@@ -41,6 +42,7 @@
     { "path": "alfa-jasmine" },
     { "path": "alfa-jest" },
     { "path": "alfa-jquery" },
+    { "path": "alfa-json" },
     { "path": "alfa-json-ld" },
     { "path": "alfa-lang" },
     { "path": "alfa-lazy" },
