--- a/packages/alfa-act/package.json
+++ b/packages/alfa-act/package.json
@@ -22,11 +22,12 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@siteimprove/alfa-earl": "^0.0.0",
     "@siteimprove/alfa-equatable": "^0.0.0",
     "@siteimprove/alfa-functor": "^0.0.0",
     "@siteimprove/alfa-future": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
-    "@siteimprove/alfa-json-ld": "^0.0.0",
+    "@siteimprove/alfa-json": "^0.0.0",
     "@siteimprove/alfa-list": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
