--- a/packages/alfa-dom/package.json
+++ b/packages/alfa-dom/package.json
@@ -25,7 +25,9 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-css": "^0.0.0",
+    "@siteimprove/alfa-earl": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-json": "^0.0.0",
     "@siteimprove/alfa-lazy": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
