--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -38,7 +38,13 @@
       "path": "../alfa-css"
     },
     {
+      "path": "../alfa-earl"
+    },
+    {
       "path": "../alfa-iterable"
+    },
+    {
+      "path": "../alfa-json"
     },
     {
       "path": "../alfa-lazy"
