--- a/packages/alfa-graph/package.json
+++ b/packages/alfa-graph/package.json
@@ -23,6 +23,8 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-equatable": "^0.0.0",
+    "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-json": "^0.0.0",
     "@siteimprove/alfa-map": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-set": "^0.0.0"
