--- a/packages/alfa-http/package.json
+++ b/packages/alfa-http/package.json
@@ -22,6 +22,11 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@siteimprove/alfa-earl": "^0.0.0",
+    "@siteimprove/alfa-encoding": "^0.0.0",
+    "@siteimprove/alfa-json": "^0.0.0",
+    "@siteimprove/alfa-map": "^0.0.0",
+    "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-predicate": "^0.0.0"
   },
   "devDependencies": {
