--- a/packages/alfa-lazy/package.json
+++ b/packages/alfa-lazy/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@siteimprove/alfa-equatable": "^0.0.0",
     "@siteimprove/alfa-functor": "^0.0.0",
+    "@siteimprove/alfa-json": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
     "@siteimprove/alfa-thunk": "^0.0.0",
