--- a/packages/alfa-map/package.json
+++ b/packages/alfa-map/package.json
@@ -27,8 +27,9 @@
     "@siteimprove/alfa-fnv": "^0.0.0",
     "@siteimprove/alfa-foldable": "^0.0.0",
     "@siteimprove/alfa-functor": "^0.0.0",
-    "@siteimprove/alfa-iterable": "^0.0.0",
     "@siteimprove/alfa-hash": "^0.0.0",
+    "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-json": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
