--- a/packages/alfa-record/package.json
+++ b/packages/alfa-record/package.json
@@ -25,6 +25,7 @@
     "@siteimprove/alfa-equatable": "^0.0.0",
     "@siteimprove/alfa-foldable": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-json": "^0.0.0",
     "@siteimprove/alfa-list": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-reducer": "^0.0.0"
