--- a/packages/alfa-record/tsconfig.json
+++ b/packages/alfa-record/tsconfig.json
@@ -13,6 +13,9 @@
       "path": "../alfa-iterable"
     },
     {
+      "path": "../alfa-json"
+    },
+    {
       "path": "../alfa-list"
     },
     {
