--- a/packages/alfa-result/package.json
+++ b/packages/alfa-result/package.json
@@ -25,6 +25,7 @@
     "@siteimprove/alfa-equatable": "^0.0.0",
     "@siteimprove/alfa-foldable": "^0.0.0",
     "@siteimprove/alfa-functor": "^0.0.0",
+    "@siteimprove/alfa-json": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
