--- a/packages/alfa-result/tsconfig.json
+++ b/packages/alfa-result/tsconfig.json
@@ -19,6 +19,9 @@
       "path": "../alfa-functor"
     },
     {
+      "path": "../alfa-json"
+    },
+    {
       "path": "../alfa-mapper"
     },
     {
