--- a/packages/alfa-slice/package.json
+++ b/packages/alfa-slice/package.json
@@ -22,6 +22,8 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-json": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0"
   },
   "devDependencies": {
