--- a/packages/alfa-slice/tsconfig.json
+++ b/packages/alfa-slice/tsconfig.json
@@ -4,6 +4,12 @@
   "files": ["src/index.ts", "src/slice.ts"],
   "references": [
     {
+      "path": "../alfa-iterable"
+    },
+    {
+      "path": "../alfa-json"
+    },
+    {
       "path": "../alfa-option"
     },
     {
