--- a/packages/alfa-web/package.json
+++ b/packages/alfa-web/package.json
@@ -24,8 +24,10 @@
   "dependencies": {
     "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-earl": "^0.0.0",
     "@siteimprove/alfa-graph": "^0.0.0",
     "@siteimprove/alfa-http": "^0.0.0",
+    "@siteimprove/alfa-json": "^0.0.0",
     "@siteimprove/alfa-predicate": "^0.0.0"
   },
   "devDependencies": {
