Make `Branched` JSON serializable

--- a/packages/alfa-compatibility/tsconfig.json
+++ b/packages/alfa-compatibility/tsconfig.json
@@ -10,10 +10,10 @@
   ],
   "references": [
     {
-      "path": "../alfa-branched"
+      "path": "../alfa-iterable"
     },
     {
-      "path": "../alfa-iterable"
+      "path": "../alfa-json"
     },
     {
       "path": "../alfa-test"
