--- a/packages/alfa-compatibility/package.json
+++ b/packages/alfa-compatibility/package.json
@@ -25,8 +25,8 @@
     "prepare": "node scripts/features.js && node scripts/browsers.js"
   },
   "dependencies": {
-    "@siteimprove/alfa-branched": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-json": "^0.0.0",
     "@types/browserslist": "^4.4.0",
     "browserslist": "^4.4.1"
   },
