--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -90,9 +90,12 @@
     "src/sia-r8/rule.ts",
     "src/sia-r9/rule.ts",
     "test/common/evaluate.ts",
+    "test/common/make-oracle.ts",
     "test/common/outcome.ts",
     "test/sia-r1/rule.spec.tsx",
     "test/sia-r2/rule.spec.tsx",
+    "test/sia-r24/rule.spec.tsx",
+    "test/sia-r38/rule.spec.tsx",
     "test/sia-r57/rule.spec.tsx",
     "test/sia-r64/rule.spec.tsx"
   ],
