Add code for no result

--- a/packages/alfa-result/tsconfig.json
+++ b/packages/alfa-result/tsconfig.json
@@ -4,6 +4,7 @@
   "files": [
     "src/err.ts",
     "src/index.ts",
+    "src/noresult.ts",
     "src/ok.ts",
     "src/result.ts",
     "test/result.spec.ts"
