rename package trilean

--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -161,6 +161,9 @@
       "path": "../alfa-test"
     },
     {
+      "path": "../alfa-trilean"
+    },
+    {
       "path": "../alfa-web"
     }
   ]
