--- a/packages/alfa-act/package.json
+++ b/packages/alfa-act/package.json
@@ -34,7 +34,8 @@
     "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-record": "^0.0.0",
     "@siteimprove/alfa-result": "^0.0.0",
-    "@siteimprove/alfa-sequence": "^0.0.0"
+    "@siteimprove/alfa-sequence": "^0.0.0",
+    "@siteimprove/alfa-trilean": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
