Move trilean iterable function to separate file

--- a/packages/alfa-trilean/tsconfig.json
+++ b/packages/alfa-trilean/tsconfig.json
@@ -3,8 +3,10 @@
   "extends": "../tsconfig.json",
   "files": [
     "src/index.ts",
+    "src/iterable.ts",
     "src/predicate.ts",
     "src/trilean.ts",
+    "test/iterable.spec.tsx",
     "test/predicate.spec.tsx"
   ],
   "references": [
