--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   ],
   "devDependencies": {
     "@types/node": "^12.12.24",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
     "axios": "^0.19.0",
+    "eslint": "^6.8.0",
     "execa": "^4.0.0",
     "lerna": "^3.19.0",
     "minimist": "^1.2.0",
