--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -5,6 +5,7 @@
     "src/common/applicability/audio.ts",
     "src/common/applicability/video.ts",
     "src/common/expectations/expectation.ts",
+    "src/common/expectations/audio-or-video-text-alternative.ts",
     "src/common/predicate/has-accessible-name.ts",
     "src/common/predicate/has-attribute.ts",
     "src/common/predicate/has-category.ts",
