Improve `Future` and `Branched` traversal

--- a/packages/alfa-future/tsconfig.json
+++ b/packages/alfa-future/tsconfig.json
@@ -16,6 +16,9 @@
       "path": "../alfa-functor"
     },
     {
+      "path": "../alfa-iterable"
+    },
+    {
       "path": "../alfa-list"
     },
     {
