--- a/packages/alfa-future/package.json
+++ b/packages/alfa-future/package.json
@@ -26,6 +26,7 @@
     "@siteimprove/alfa-continuation": "^0.0.0",
     "@siteimprove/alfa-either": "^0.0.0",
     "@siteimprove/alfa-functor": "^0.0.0",
+    "@siteimprove/alfa-iterable": "^0.0.0",
     "@siteimprove/alfa-list": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
