Add ref to alfa-set

--- a/packages/alfa-aria/tsconfig.json
+++ b/packages/alfa-aria/tsconfig.json
@@ -132,6 +132,9 @@
       "path": "../alfa-sequence"
     },
     {
+      "path": "../alfa-set"
+    },
+    {
       "path": "../alfa-style"
     },
     {
