--- a/packages/alfa-style/package.json
+++ b/packages/alfa-style/package.json
@@ -30,6 +30,7 @@
     "@siteimprove/alfa-equatable": "^0.0.0",
     "@siteimprove/alfa-functor": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-json": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-math": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
