Progress on CSS font properties

--- a/packages/alfa-style/tsconfig.json
+++ b/packages/alfa-style/tsconfig.json
@@ -5,9 +5,11 @@
     "src/index.ts",
     "src/property.ts",
     "src/property/display.ts",
+    "src/property/font.ts",
     "src/property/opacity.ts",
     "src/property/transform.ts",
     "src/property/visibility.ts",
+    "src/resolver.ts",
     "src/style.ts",
     "src/value.ts"
   ],
