--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -11,6 +11,12 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - uses: actions/cache@v1
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
       - run: npm install -g yarn
       - run: yarn install --ignore-scripts
       - run: yarn build
