Improve serialization of CSS selectors

--- a/packages/alfa-selector/tsconfig.json
+++ b/packages/alfa-selector/tsconfig.json
@@ -16,6 +16,9 @@
       "path": "../alfa-iterable"
     },
     {
+      "path": "../alfa-json"
+    },
+    {
       "path": "../alfa-option"
     },
     {
