--- a/packages/alfa-selector/package.json
+++ b/packages/alfa-selector/package.json
@@ -26,6 +26,7 @@
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-equatable": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-json": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-parser": "^0.0.0",
     "@siteimprove/alfa-predicate": "^0.0.0",
