--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -13,11 +13,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - uses: actions/cache@v1
         with:
-          path: node_modules
+          path: .cache/yarn
           key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
       - run: npm install -g yarn
-      - run: yarn install --ignore-scripts
+      - run: yarn install --ignore-scripts --cache-folder .cache/yarn
       - run: yarn build
       - run: yarn test
