--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -14,9 +14,7 @@ jobs:
       - uses: actions/cache@v1
         with:
           path: .cache/yarn
-          key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+          key: yarn-${{ hashFiles('yarn.lock') }}
       - run: npm install -g yarn
       - run: yarn install --ignore-scripts --cache-folder .cache/yarn
       - run: yarn build
