Add `Parser.filter()` function

--- a/packages/alfa-parser/tsconfig.json
+++ b/packages/alfa-parser/tsconfig.json
@@ -10,10 +10,16 @@
       "path": "../alfa-option"
     },
     {
+      "path": "../alfa-predicate"
+    },
+    {
       "path": "../alfa-result"
     },
     {
       "path": "../alfa-test"
+    },
+    {
+      "path": "../alfa-thunk"
     }
   ]
 }
