--- a/packages/alfa-parser/package.json
+++ b/packages/alfa-parser/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
-    "@siteimprove/alfa-result": "^0.0.0"
+    "@siteimprove/alfa-predicate": "^0.0.0",
+    "@siteimprove/alfa-result": "^0.0.0",
+    "@siteimprove/alfa-thunk": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
