Add `URL` value type

--- a/packages/alfa-css/tsconfig.json
+++ b/packages/alfa-css/tsconfig.json
@@ -32,7 +32,8 @@
     "src/value/transform/scale.ts",
     "src/value/transform/skew.ts",
     "src/value/transform/translate.ts",
-    "src/value/unit.ts"
+    "src/value/unit.ts",
+    "src/value/url.ts"
   ],
   "references": [
     {
