--- a/packages/alfa-parser/tsconfig.json
+++ b/packages/alfa-parser/tsconfig.json
@@ -4,6 +4,9 @@
   "files": ["src/index.ts", "src/parser.ts"],
   "references": [
     {
+      "path": "../alfa-callback"
+    },
+    {
       "path": "../alfa-mapper"
     },
     {
